--- a/src/main/webapp/signup/info.css
+++ b/src/main/webapp/signup/info.css
@@ -31,14 +31,14 @@ body {
     margin: 0 auto;
 
     border-radius: 50%;
-    border: 1px solid #ddd;   /* ★ 테두리를 여기서 줌 */
+    border: 1px solid #ddd;
     background-color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-/* 실제 프로필 이미지 (있으면 보여주고, 없으면 그냥 하얀 원만 보임) */
+/* 실제 프로필 이미지 */
 .profile-img .profile {
     width: 100%;
     height: 100%;
@@ -46,7 +46,7 @@ body {
     border-radius: 50%;
 }
 
-/* 카메라 동그라미 배경 */
+/* 카메라 동그라미 */
 .profile-img .camera {
     position: absolute;
     right: -4px;
@@ -63,12 +63,10 @@ body {
     z-index: 10;
 }
 
-/* 카메라 아이콘 이미지 */
 .profile-img .camera img {
     width: 18px;
     height: 18px;
 }
-
 
 /* 폼 입력 */
 .form-box {
@@ -80,30 +78,56 @@ label {
     font-weight: 600;
 }
 
+/* 공통 인풋 */
 input[type="text"],
 input[type="password"] {
     width: 100%;
-    padding: 12px;
-    margin-top: 6px;
+    height: 48px;
+    padding: 0 14px;
+    margin-top: 0;
     border: 1px solid #ddd;
-    border-radius: 6px;
+    border-radius: 8px;
     font-size: 14px;
     box-sizing: border-box;
 }
 
-/* 아이디 + 중복확인 */
-.id-area {
-    display: flex;
-    gap: 8px;
+.height-48 {
+    height: 48px !important;
 }
 
-.check-btn {
-    padding: 10px 14px;
-    background: #cfcfcf;
+.id-input-wrap {
+    position: relative;
+    width: 100%;
+}
+
+.id-input-wrap input {
+    width: 100%;
+    height: 48px;
+    padding: 0 90px 0 14px; /* 버튼 들어갈 오른쪽 여백 확보 */
+    border-radius: 8px;
+    border: 1px solid #ddd;
+    box-sizing: border-box;
+}
+
+.id-check-btn {
+    position: absolute;
+    right: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 34px;
+    padding: 0 12px;
+
+    background: #A1A49D;
     border: none;
     border-radius: 6px;
-    cursor: pointer;
     font-size: 13px;
+    color: #fff;
+    transition: 0.2s;
+}
+
+.id-check-btn.active {
+    background: #DFCEB3;
+    cursor: pointer;
 }
 
 /* 비밀번호 칸 */
@@ -132,8 +156,7 @@ input[type="password"] {
 }
 
 /* 포커스 시 테두리 */
-.nickname-box input:focus,
-.pw-box input:focus {
+input:focus {
     border-color: #78866B;
     border-width: 2px;
     outline: none;
