--- a/src/main/webapp/main/mainpage.css
+++ b/src/main/webapp/main/mainpage.css
@@ -137,6 +137,7 @@ body {
 /* 왼쪽 상자 */
 .left-box {
     display: flex;
+    width: 250px;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -175,9 +176,21 @@ body {
     color: #7B7B7B;
 }
 
-.login-btn {
+.profile-info-text p {
+    margin: 3px 0 3px 0;
+    font-size: 15px;
+}
+
+.profile-dday {
+    font-size: 18px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.logout-btn {
     width: 100%;
     padding: 10px;
+    margin-top: 22px;
     background: #E9E9E2;
     border: none;
     color: #828282;
@@ -258,27 +271,26 @@ body {
     margin-top: 0px;
 }
 
-/* 뉴스 메인 영역 (배경 박스) */
+/* 메인 영역 (배경 박스) */
 .main-news {
     background: #E9E9E2;
     padding: 20px 18px;
     border: 1px solid #ddd;
     box-sizing: border-box;
-
     display: grid;
-    grid-template-columns: 2.5fr 1fr; /* 왼쪽:메인, 오른쪽:맞춤+군대 */
+    grid-template-columns: 2.5fr 1fr;
     column-gap: 20px;
 }
 
 /* 왼쪽/오른쪽 박스 기본 */
 .main-news-left {
-    /* 필요하면 높이, 스크롤 등 추가 가능 */
+
 }
 
 .main-news-right {
     display: flex;
     flex-direction: column;
-    gap: 20px; /* 위: 맞춤, 아래: 군대 사이 간격 */
+    gap: 20px;
 }
 
 .main-news-header {
