--- a/src/main/webapp/mypage/mypage.css
+++ b/src/main/webapp/mypage/mypage.css
@@ -1,29 +1,131 @@
-@charset "UTF-8";
-
 body {
     margin: 0;
     font-family: "Noto Sans KR", sans-serif;
     background: #f3f3f3;
 }
 
-/* 헤더 */
 .header {
-    height: 80px;
+    height: 137px;
     background-color: #788665;
-    color: #ffffff;
+    padding: 0 40px;
+    box-sizing: border-box;
 }
 
 .header-inner {
-    max-width: 1100px;
-    margin: 0 auto;
-    height: 100%;
+    position: relative;
+    align-items: center;
+    padding: 20px 0;
     display: flex;
     align-items: center;
-    position: relative;
 }
 
 .logo img {
-    height: 50px;
+    height: 120px;
+    display: block;
+    margin-top: -10px;
+    margin-left: 42px;
+}
+
+.header-center {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    width: 60%;
+    max-width: 800px;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    gap: 6px
+}
+
+.nav a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 90px;
+    color: #CFCFCF;
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 17px;
+    transition: color 0.2s ease, font-size 0.2s ease;
+}
+
+.nav a.active {
+    color: #FFFFFF !important;
+    font-weight: 700;
+    font-size: 19px;
+}
+
+.nav a:not(.active):hover {
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.nav a.active:hover {
+    color: #FFFFFF;
+    font-size: 19px;
+}
+
+.nav .divider {
+    margin: 0 2px;
+    color: #CFCFCF;
+    font-size: 16px;
+    line-height: 1;
+    pointer-events: none;
+}
+
+.profile-card {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 25px;
+}
+
+.profile-img {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    margin: 0 auto;
+    border-radius: 50%;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-img .profile {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.profile-img .camera {
+    position: absolute;
+    right: -4px;
+    bottom: -4px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background: #ffffff;
+    box-shadow: 0 0 0 1px #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    z-index: 10;
+}
+
+.profile-img .camera img {
+    width: 14px;
+    height: 14px;
 }
 
 .gnb {
@@ -61,14 +163,12 @@ body {
     cursor: pointer;
 }
 
-/* 메인 래퍼 */
 .mypage-wrap {
     max-width: 1100px;
     margin: 40px auto 60px;
     background: #ffffff;
 }
 
-/* 상단/중간 라인 */
 .top-line,
 .middle-line {
     height: 1px;
@@ -77,11 +177,10 @@ body {
 
 .profile-card {
     display: flex;
-    padding: 40px 60px;
+    padding: 40px;
     box-sizing: border-box;
 }
 
-/* 왼쪽 프로필 */
 .profile-left {
     display: flex;
     align-items: center;
@@ -96,9 +195,10 @@ body {
 }
 
 .profile-img {
-    width: 100%;
+    width: 15%;
     height: 100%;
     border-radius: 50%;
+    margin-right: 23px;
     border: 2px solid #dddddd;
     box-sizing: border-box;
     background: #f5f5f5;
@@ -125,7 +225,6 @@ body {
     font-size: 16px;
 }
 
-/* 오른쪽 프로필 정보 */
 .profile-right {
     flex: 1;
     padding-left: 40px;
@@ -169,7 +268,6 @@ body {
     background: #a0a0a0;
 }
 
-/* 하단 메뉴 */
 .mypage-menu {
     display: grid;
     grid-template-columns: 1fr 1fr;
