--- a/src/main/webapp/mypage/mypage.css
+++ b/src/main/webapp/mypage/mypage.css
@@ -215,6 +215,10 @@ body {
     border: 1px solid #cccccc;
 }
 
+.profile-text{
+
+}
+
 .profile-text p {
     margin: 4px 0;
     font-size: 14px;
@@ -238,21 +242,23 @@ body {
 }
 
 .progress-row {
-    margin-bottom: 16px;
+    display: flex;
+    justify-content: flex-end; /* 오른쪽 정렬 */
+    align-items: center;
+    width: 100%;
 }
 
 .progress-label {
-    display: block;
-    font-size: 13px;
-    margin-bottom: 6px;
+    margin-left: 10px; /* 진행바와 간격을 주기 위한 여백 */
 }
 
 .progress-bar {
-    width: 100%;
+    width: 100%; /* 진행바가 전체 너비를 차지 */
     height: 8px;
     background: #e5e5e5;
     border-radius: 999px;
     overflow: hidden;
+    position: relative;
 }
 
 .progress-fill {
