--- a/src/main/webapp/mypage/mypage.css
+++ b/src/main/webapp/mypage/mypage.css
@@ -248,8 +248,8 @@ body {
 
 .progress-row {
     display: flex;
-    flex-direction: column; /* 텍스트와 진행바를 세로로 배치 */
-    align-items: flex-start; /* 왼쪽 정렬 */
+    flex-direction: column;
+    align-items: flex-start;
     width: 100%;
     align-items: flex-end;
 }
@@ -293,7 +293,7 @@ body {
 
 /* 메뉴 아이템 */
 .menu-item {
-    padding: 20px 0;
+    padding: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -307,9 +307,9 @@ body {
     background-color: #E9E9E2;
     color: #555555;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.18);
+    padding: 20px;
 }
 
-/* 화살표 기본 색상 */
 .arrow {
     font-size: 16px;
     transition: color 0.3s ease;
