--- a/src/main/webapp/login/find_id.css
+++ b/src/main/webapp/login/find_id.css
@@ -26,6 +26,15 @@ body > img {
     box-sizing: border-box;
 }
 
+.logo-wrap {
+    width: 100%;
+    text-align: center !important;
+}
+
+.logo-wrap img {
+    display: inline-block;
+}
+
 /* 입력 박스 */
 .nickname-box,
 .pw-box {
@@ -37,6 +46,7 @@ body > img {
 .nickname-box label,
 .pw-box label {
     font-size: 14px;
+    font-weight: bold;
     margin-bottom: 6px;
     display: inline-block;
 }
