--- a/src/main/webapp/mypage/mypage.css
+++ b/src/main/webapp/mypage/mypage.css
@@ -217,7 +217,7 @@ body {
 }
 
 .profile-text {
-    text-align: center;
+    text-align: left;
     left: 223px;
     position: absolute;
     margin-top: 16px;
