--- a/src/main/webapp/signup/militaryInfo.css
+++ b/src/main/webapp/signup/militaryInfo.css
@@ -135,7 +135,7 @@ input[type="text"]:focus {
     flex-shrink: 0;
 }
 
-/* 리스트 영역 (독립 스크롤 적용) */
+/* 리스트 영역 */
 #yearList, #monthList, #dayList {
     flex: 1;
     overflow-y: auto;
