--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -281,11 +281,11 @@ nav .divider {
 .profile-info-text p { margin: 3px 0 3px 0; font-size: 15px; }
 .profile-dday { font-size: 18px; font-weight: bold; margin-top: 10px; }
 
-.logout-btn {
+.login-btn {
     width: 100%;
     padding: 10px;
-    margin-top: 22px;
-    background: #E9E9E2;
+    margin-top: 8px;
+    background: #fafaf6;
     border: none;
     color: #828282;
     cursor: pointer;
